# raytracer

./: .gitignore  .gitignore~  CMakeLists.txt  Makefile  README.md
include/: avsio.h  list.h  objects.h  raytrace.h  vector.h  xmlio.h
prototypes/: prot01.txt  protoIO  protoIO.c
resources/scenes/: scn00.xml  scn02.xml  scn03.xml  scn04.xml  scn05.xml  scn06.xml  scn07.xml  scn08.xml  scn09.xml  scnquijotesolo.xml
src/: avsio.c  list.c  objects.c  raytrace.c  raytracer.c  test01.c  test02.c  test03.c  test_vector.c  vector.c  xmlio.c
